--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           ls
-          git submodule update --init --recursive
-          make
+          git submodule init && git submodule update && make -C lzfse
           ls
           
           
