--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           ls
+          sudo apt install libgcc-9-dev -y
           git submodule init && git submodule update && make -C lzfse && make
           ls
           
